--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -52,3 +52,13 @@ body {
 footer {
   margin: 50px 0;
 }
+
+.panel-heading {
+  height: 50px;
+  word-break: break-word!important;
+  word-wrap: break-word!important;
+}
+
+.panel-body {
+  height: 150px;
+}
