--- a/public/css/shop-homepage.css
+++ b/public/css/shop-homepage.css
@@ -55,8 +55,8 @@ footer {
 
 .panel-heading {
   height: 50px;
-  word-break: break-word!important;
-  word-wrap: break-word!important;
+  word-break: break-word;
+  word-wrap: break-word;
 }
 
 .panel-body {
