--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -26,14 +26,13 @@
 		<!-- Page Content -->
 		<div class="container">
 			<div class="row">
-				<a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
-				<a href="{{ path('user_list') }}" class="btn btn-warning">Liste des utilisateurs</a>
-
 				{% if app.user %}
+					{% if is_granted('ROLE_ADMIN') %}
+						<a href="{{ path('user_create') }}" class="btn btn-primary">Créer un utilisateur</a>
+						<a href="{{ path('user_list') }}" class="btn btn-warning">Liste des utilisateurs</a>
+					{% endif %}
 					<a href="{{ path('logout') }}" class="pull-right btn btn-danger">Se déconnecter</a>
-				{% endif %}
-
-				{% if not app.user and 'login' != app.request.attributes.get('_route') %}
+				{% elseif 'login' != app.request.attributes.get('_route') %}
 					<a href="{{ path('login') }}" class="btn btn-success">Se connecter</a>
 				{% endif %}
 			</div>
