--- a/templates/task/list.html.twig
+++ b/templates/task/list.html.twig
@@ -25,10 +25,12 @@
 								{% endif %}
 							</button>
 						</form>
-						<form action="{{ path('task_delete', {'id' : task.id }) }}" method="post">
-							<input type="hidden" name="_method" value="DELETE">
-							<button class="btn btn-danger btn-sm pull-right">Supprimer</button>
-						</form>
+						{% if is_granted('TASK_DELETE', task) %}
+							<form action="{{ path('task_delete', {'id' : task.id }) }}" method="post">
+								<input type="hidden" name="_method" value="DELETE">
+								<button class="btn btn-danger btn-sm pull-right">Supprimer</button>
+							</form>
+						{% endif %}
 					</div>
 					<div class="panel-footer">
                         {{ task.author is null ? '' : 'Auteur : ' ~ task.author.username }}
